# data-pipeline

./: .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
.gitlab/ci/: build.yml  schemas.yml  test.yml
.gitlab/issue_templates/: bug.md
.gitlab/merge_request_templates/: default.md
inspo/responses/endpoint/: kapitola.json  souhrnny.json
inspo/responses/our_endpoint/: datasets.json  kapitola.json  misc.json  v2026.json
schemas/: datasets.schema.json  endpoint.kapitola.schema.json  misc.schema.json  our.kapitola.schema.json  souhrnny.schema.json  target.schema.json  v_year.schema.json
scripts/: push_schemas.py
src/: __init__.py  main.py  task.py
src/support/: __init__.py  chapters.py  getenv.py  schemas.py  scrapper.py  storage.py
tests/: test_chapters.py  test_getenv.py  test_schemas.py  test_scrapper.py  test_storage.py  test_task.py
tests/integration/: test_integration_chapters.py  test_integration_storage.py
