[project]
name = "data-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "respx>=0.23.1",
    "ruff>=0.15.22",
]

[tool.pytest.ini_options]
markers = [
    "integration: Integration tests that require network access and config.json",
]
